2008-06-18  Dominique Dumont v0.201

	* lib/Config/Model/TkUI.pm (Populate): Replaced "placeholder" with logo
	(edit_copy): Bug fix that prevented copying hash elements.

2008-05-07  Dominique Dumont v0.105

	* lib/Config/Model/TkUI.pm (): Added Edit menu with copy and paste
	entries. (No, there won't be a 'cut' entry).

2008-05-04  Domi 

	* lib/Config/Model/Tk/LeafEditor.pm: Fix bug in value help display

2008-04-29  Dominique Dumont 

	* lib/Config/Model/Tk/HashEditor.pm (move_selected_to): Fixed move
	within ordered hash

2008-04-27  Domi  

	* lib/Config/Model/Tk/ListEditor.pm (set_all_items): new method to
	set a list with a list of words. They can be separated by commas,
	white spaces or any non-alphanumeric character (e.g. /\W+/)

2008-04-17  Dominique Dumont 

	* lib/Config/Model/Tk/HashEditor.pm: Select and show new items in
	Listbox

	* lib/Config/Model/TkUI.pm: Add debug menu (rely on
	Tk::ObjScanner).  Bug fix related to configuration check

2008-04-08  Dominique Dumont 

	* TkUI CheckListEditor and Viewer: Reworked for better edition

2008-04-03  Dominique Dumont v0.104

	* lib/Config/Model/TkUI.pm: added File->check menu entry

2008-03-28  Dominique Dumont  

	* lib/Config/Model/Tk/HashEditor.pm ():added up and down buttons
	for ordered hashes

	* lib/Config/Model/NodeViewer.pm: Fix bug that prevented
	view of root configuration class

2008-03-22  Domi  <domi@bilbo.maison> 

	* lib/Config/Model/Tk/ListEditor.pm: Reworked to provide better
	list editor. Hash and List editor are now handled by separate
	widgets.

2008-03-20  Dominique Dumont  

	* lib/Config/Model/TkUI.pm (disp_leaf): cut long string in HList
	display (on the left)

2008-03-12  Dominique Dumont v0.103

	* t/config-model-ui.t (inc_d): Fixed test to load TkUI instead of
	TkUi

2008-03-07  Dominique Dumont v0.102

	* Renamed TkUi.pm to TkUI.pm to fit Module list declaration
	* TkUI.pm (Populate): added -store_sub option
	* all: Moved to svn
	* all: Changed keywords substitution to fit svn